# Juerka-Sound-Recognition

./: .gitmodules  CMakeLists.txt  README.md
Juerka-Sound-Recognition/: CMakeLists.txt  Juerka-Sound-Recognition.cpp  Juerka-Sound-Recognition.h
Juerka-Sound-Recognition/CurrentGenerator/: Common.h  Fft.cpp  Fft.h  SoundCurrentGenerator.h  SoundDataManager.cpp  SoundDataManager.h
Juerka-Sound-Recognition/test/: voice_recognition_test.cpp  voice_recognition_test_1.cpp  voice_recognition_test_2.cpp  voice_recognition_test_3.cpp  voice_recognition_test_4.cpp  voice_recognition_test_5.cpp  voice_recognition_test_6.cpp  voice_recognition_test_7.cpp  voice_recognition_test_8.cpp
Licenses/: Intel oneAPI MKL library.txt
